spacing fixed

--- a/src/about-css.css
+++ b/src/about-css.css
@@ -118,14 +118,14 @@ footer {
   h2 {
     font-size: 22px;
   }
-  ul {
+  .hero ul {
     font-size: 12px;
   }
   button {
     font-size: 12px;
     padding: 5px 10px;
     border-radius: 10px;
-    margin: 10px;
+    margin: 5px;
     text-transform: uppercase;
     font-weight: 500;
   }
@@ -161,6 +161,10 @@ footer {
   .navbar-toggler-icon {
     max-width: 25px;
   }
+  .navbar ul {
+    font-size: 12px;
+  }
+
   .hero h1 {
     font-size: 38px;
   }
@@ -189,6 +193,7 @@ footer {
   }
   #skills-sd ul {
     list-style: none;
+    margin-bottom: 0;
   }
   #language-logos-sd {
     width: 70px;
